# digital-store

./: .env.example  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  nginx.conf  pyproject.toml  run.py
alembic/: env.py
app/: config.py  database.py  main.py
app/api/: admin.py  webhooks.py
app/bot/: __init__.py  keyboards.py  middleware.py
app/bot/handlers/: admin.py  catalog.py  order.py  start.py
app/models/: __init__.py  order.py  product.py  referral.py  user.py
app/schemas/: __init__.py  order.py  product.py  user.py
app/services/: __init__.py  notification_service.py  order_service.py  payment_service.py  product_service.py  user_service.py
app/tasks/: scheduler.py
app/utils/: helpers.py
data/: products.json
scripts/: backup.sh  deploy.sh  setup.sh  start.sh
